--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "js-cookie": "^2.2.1",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.6",
     "typescript": "^4.1.5"
   }
 }
